RESOLVED FIXED234896
A gentle momentum scroll into an edge sometimes fails to rubberband, stopping abruptly
https://bugs.webkit.org/show_bug.cgi?id=234896
Summary A gentle momentum scroll into an edge sometimes fails to rubberband, stopping...
Simon Fraser (smfr)
Reported 2022-01-05 13:45:51 PST
A gentle momentum scroll into an edge sometimes fails to rubberband, stopping abruptly
Attachments
Patch (3.47 KB, patch)
2022-01-05 15:24 PST, Simon Fraser (smfr)
thorton: review+
Patch (3.46 KB, patch)
2022-01-06 11:42 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2022-01-05 15:24:35 PST
Tim Horton
Comment 2 2022-01-05 15:39:12 PST
Comment on attachment 448440 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=448440&action=review > Source/WebCore/platform/mac/ScrollAnimationRubberBand.mm:94 > + // We might be rubberbanding away from and edge and back, so wait a frame or two before checking for completion. "and edge"
Simon Fraser (smfr)
Comment 3 2022-01-06 11:42:26 PST
EWS
Comment 4 2022-01-06 12:52:44 PST
Committed r287714 (245798@main): <https://commits.webkit.org/245798@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448515 [details].
Radar WebKit Bug Importer
Comment 5 2022-01-06 12:53:22 PST
Note You need to log in before you can comment on or make changes to this bug.